# binpack-rust

./: Cargo.toml  README.md
src/: arithmetic.rs  compressed_data_file.rs  compressed_move.rs  compressed_position.rs  data_entry.rs  lib.rs  main.rs  packed_entry.rs  packed_position.rs  training_data_entry.rs  training_data_file.rs
src/chess/: attacks.rs  bitboard.rs  castling_rights.rs  color.rs  coords.rs  hyperbola.rs  mod.rs  move.rs  piece.rs  piecetype.rs  position.rs
src/reader/: bitreader.rs  data_reader.rs  mod.rs  move_score_list_reader.rs  training_data_reader.rs
src/writer/: bitwriter.rs  mod.rs  move_score_list_writer.rs
