[package]
name = "binpack"
version = "0.1.0"
description = "Library to read Stockfish Binpacks"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/Disservin/binpack-rust"
readme = "README.md"

[dependencies]
byteorder = "1.5.0"
thiserror = "2.0.8"
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "binpack"
path = "src/main.rs"

[profile.release]
debug = 1
opt-level = 3
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
